v8/tests/messages/regression-1201933-2.out
regression-1201933-2.js:7: Uncaught TypeError: var 'a' has already been declared
  const a;
        ^
