v8/tests/messages/regression-1201933-2.js
// This is okay.
function foo() { var a; const a; }

// This isn't.
(function () {
  var a;
  const a;
})();
